--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>nowoi — Global tools & resources</title>
+  <meta name="description" content="nowoi is a fast, lightweight directory of global resources and free online tools." />
+  <link rel="icon" href="/assets/icons/favicon.svg" />
+  <link rel="stylesheet" href="/assets/css/styles.css" />
+</head>
+<body>
+  <a class="skip-link" href="#main">Skip to content</a>
 
+  <header class="site-header">
+    <div class="container header-inner">
+      <a class="brand" href="/">nowoi</a>
+      <nav class="nav" aria-label="Primary">
+        <a href="/" aria-current="page">Home</a>
+        <a href="/resources/">Resources</a>
+        <a href="/tools/">Tools</a>
+        <a href="/about/">About</a>
+      </nav>
+    </div>
+  </header>
+
+  <main id="main" class="container">
+    <section class="card">
+      <h1>nowoi</h1>
+      <p>A fast, minimal platform for global tools and resources.</p>
+    </section>
+  </main>
+
+  <footer class="site-footer">
+    <div class="container footer-inner">
+      <small>© <span id="year"></span> nowoi</small>
+      <small><a href="/about/">About</a></small>
+    </div>
+  </footer>
+
+  <script src="/assets/js/main.js" defer></script>
+</body>
+</html>
