--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
   <link rel="icon" href="/assets/icons/favicon.svg" />
   <link rel="stylesheet" href="/assets/css/styles.css" />
 </head>
+  <!-- Under Construction Modal -->
+<div id="underConstructionOverlay">
+  <div class="underConstructionModal">
+    <h2>Website Under Construction</h2>
+    <p>Services are not available yet.</p>
+  </div>
+</div>
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
 
