--- a/index.html
+++ b/index.html
@@ -8,13 +8,7 @@
   <link rel="icon" href="/assets/icons/favicon.svg" />
   <link rel="stylesheet" href="/assets/css/styles.css" />
 </head>
-  <!-- Under Construction Modal -->
-<div id="underConstructionOverlay">
-  <div class="underConstructionModal">
-    <h2>Website Under Construction</h2>
-    <p>Services are not available yet.</p>
-  </div>
-</div>
+ 
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
 
@@ -45,5 +39,42 @@
   </footer>
 
   <script src="/assets/js/main.js" defer></script>
+
+  /* Under Construction Overlay */
+#underConstructionOverlay {
+  position: fixed;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.6);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+}
+
+/* Modal box */
+.underConstructionModal {
+  background: #ffffff;
+  padding: 40px 48px;
+  border-radius: 12px;
+  text-align: center;
+  max-width: 420px;
+  width: 90%;
+  box-shadow: 0 20px 60px rgba(0, 0, 0, 0.25);
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Helvetica, Arial, sans-serif;
+}
+
+.underConstructionModal h2 {
+  margin: 0 0 12px;
+  font-size: 22px;
+  font-weight: 600;
+  color: #111;
+}
+
+.underConstructionModal p {
+  margin: 0;
+  font-size: 16px;
+  color: #555;
+}
 </body>
 </html>
