--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="/assets/icons/favicon.svg" />
   <link rel="stylesheet" href="/assets/css/styles.css" />
 </head>
- 
+
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
 
@@ -38,14 +38,14 @@
     </div>
   </footer>
 
-  <script src="/assets/js/main.js" defer></script>
-
- <!-- Under Construction Modal -->
-<div id="underConstructionOverlay">
-  <div class="underConstructionModal">
-    <h2>Website Under Construction</h2>
-    <p>Services are not available yet.</p>
+  <!-- Under Construction Modal -->
+  <div id="underConstructionOverlay" role="dialog" aria-modal="true">
+    <div class="underConstructionModal">
+      <h2>Website Under Construction</h2>
+      <p>Services are not available yet.</p>
+    </div>
   </div>
-</div>
+
+  <script src="/assets/js/main.js" defer></script>
 </body>
 </html>
