--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿﻿﻿﻿﻿﻿﻿﻿﻿﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -12,6 +12,14 @@
 </head>
 
 <body>
+  <div class="service-modal">
+    <div class="service-modal-content">
+      <div class="logo">nowoi.com</div>
+      <h2>Service Unavailable</h2>
+      <p>We're currently performing maintenance. Please check back later.</p>
+    </div>
+  </div>
+  
   <div class="container">
     <header class="site-header">
       <div class="header-row">
