--- a/tools/password-generator.html
+++ b/tools/password-generator.html
@@ -5,17 +5,34 @@
 <title>Free Online Password Generator – Create Secure Passwords</title>
 <meta name="description" content="Use our free online Password Generator to create secure passwords instantly. No installation required. Fast, secure, and easy to use." />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="robots" content="index, follow">
+<meta name="keywords" content="password generator, secure password, online password generator, free password tool, create password online">
+<link rel="canonical" href="https://nowoi.com/tools/password-generator.html">
 <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 
 <body>
+  <div class="container">
+    <header class="site-header">
+      <div class="header-row">
+        <a href="../index.html" class="brand">nowoi.com</a>
+        <nav class="nav">
+          <a href="../index.html">Home</a>
+          <a href="./index.html" aria-current="page">Tools</a>
+          <a href="../about.html">About</a>
+          <a href="../contact.html">Contact</a>
+        </nav>
+      </div>
+    </header>
 
-<header>
-  <h1>Free Online Password Generator</h1>
-  <p>Create secure passwords instantly. 100% free. No sign-up required.</p>
-</header>
+    <div class="page-head">
+      <h1>Free Online Password Generator</h1>
+      <p>Create secure passwords instantly. 100% free. No sign-up required.</p>
+    </div>
 
-<section class="tool-box">
+
+
+    <div class="tool-box">
   <div class="options">
     <label>
       Password length: 
@@ -145,16 +162,18 @@
     </div>
 </section>
 
-<footer>
-  <p>© 2026 nowoi.com – Free Online Tools</p>
-  <div class="footer-links">
-    <a href="../index.html">Home</a>
-    <a href="../about.html">About</a>
-    <a href="../privacy-policy.html">Privacy Policy</a>
-    <a href="../terms.html">Terms</a>
-    <a href="../contact.html">Contact</a>
+    <footer class="footer">
+      <p>© <span id="year">2026</span> nowoi.com – 100% Free Online Tools</p>
+      <div class="footer-links">
+        <a href="../index.html">Home</a>
+        <a href="./index.html">Tools</a>
+        <a href="../about.html">About</a>
+        <a href="../privacy-policy.html">Privacy Policy</a>
+        <a href="../terms.html">Terms</a>
+        <a href="../contact.html">Contact</a>
+      </div>
+    </footer>
   </div>
-</footer>
 
 <script>
 function generatePassword() {
@@ -183,8 +202,9 @@ function copyPassword() {
   const output = document.getElementById('output');
   output.select();
   document.execCommand('copy');
-  alert('Copied to clipboard!');
+  showToast('Copied to clipboard!');
 }
 </script>
+<script src="../assets/js/common.js"></script>
 </body>
 </html>
