--- a/tools/uuid-generator.html
+++ b/tools/uuid-generator.html
@@ -5,17 +5,34 @@
 <title>Free Online UUID Generator – Instant UUID v4</title>
 <meta name="description" content="Use our free online UUID Generator to generate unique IDs instantly. No installation required. Fast, secure, and easy to use." />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="robots" content="index, follow">
+<meta name="keywords" content="uuid generator, unique id, online uuid generator, free uuid tool, generate uuid online">
+<link rel="canonical" href="https://nowoi.com/tools/uuid-generator.html">
 <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 
 <body>
+  <div class="container">
+    <header class="site-header">
+      <div class="header-row">
+        <a href="../index.html" class="brand">nowoi.com</a>
+        <nav class="nav">
+          <a href="../index.html">Home</a>
+          <a href="./index.html" aria-current="page">Tools</a>
+          <a href="../about.html">About</a>
+          <a href="../contact.html">Contact</a>
+        </nav>
+      </div>
+    </header>
 
-<header>
-  <h1>Free Online UUID Generator</h1>
-  <p>Generate unique UUID v4 identifiers instantly. 100% free. No sign-up required.</p>
-</header>
+    <div class="page-head">
+      <h1>Free Online UUID Generator</h1>
+      <p>Generate unique UUID v4 identifiers instantly. 100% free. No sign-up required.</p>
+    </div>
 
-<section class="tool-box">
+
+
+    <div class="tool-box">
   <button onclick="generateUUID()">Generate UUID</button>
   <textarea id="output" placeholder="Generated UUID will appear here..."></textarea>
   <button class="copy-btn" onclick="copyUUID()">Copy to Clipboard</button>
@@ -112,16 +129,18 @@
     </div>
 </section>
 
-<footer>
-  <p>© 2026 nowoi.com – Free Online Tools</p>
-  <div class="footer-links">
-    <a href="../index.html">Home</a>
-    <a href="../about.html">About</a>
-    <a href="../privacy-policy.html">Privacy Policy</a>
-    <a href="../terms.html">Terms</a>
-    <a href="../contact.html">Contact</a>
+    <footer class="footer">
+      <p>© <span id="year">2026</span> nowoi.com – 100% Free Online Tools</p>
+      <div class="footer-links">
+        <a href="../index.html">Home</a>
+        <a href="./index.html">Tools</a>
+        <a href="../about.html">About</a>
+        <a href="../privacy-policy.html">Privacy Policy</a>
+        <a href="../terms.html">Terms</a>
+        <a href="../contact.html">Contact</a>
+      </div>
+    </footer>
   </div>
-</footer>
 
 <script>
 function generateUUID() {
@@ -138,8 +157,9 @@ function copyUUID() {
   const output = document.getElementById('output');
   output.select();
   document.execCommand('copy');
-  alert('Copied to clipboard!');
+  showToast('Copied to clipboard!');
 }
 </script>
+<script src="../assets/js/common.js"></script>
 </body>
 </html>
