--- a/tools/url-encoder.html
+++ b/tools/url-encoder.html
@@ -108,15 +108,20 @@
 function encodeURL() {
   const input = document.getElementById('input').value;
   const output = document.getElementById('output');
-  output.value = encodeURIComponent(input);
+  try {
+    output.value = encodeURIComponent(input);
+  } catch (e) {
+    output.value = 'Error: ' + e.message;
+  }
 }
 
 function copyEncodedURL() {
   const output = document.getElementById('output');
   output.select();
   document.execCommand('copy');
-  alert('Copied to clipboard!');
+  showToast('Copied to clipboard!');
 }
 </script>
+<script src="../assets/js/common.js"></script>
 </body>
 </html>
