--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 </head>
 
 <body>
-  <div class="service-modal">
+  <!-- <div class="service-modal">
     <div class="service-modal-content">
       <div class="logo">nowoi.com</div>
       <h2>Service Unavailable</h2>
       <p>We're currently performing maintenance. Please check back later.</p>
     </div>
-  </div>
+  </div> -->
   
   <div class="container">
     <header class="site-header">
