--- a/tools/index.html
+++ b/tools/index.html
@@ -1,4 +1,4 @@
-﻿﻿﻿﻿﻿﻿﻿﻿﻿﻿﻿<!DOCTYPE html>
+﻿﻿﻿﻿﻿﻿﻿﻿﻿﻿﻿﻿﻿<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -148,6 +148,30 @@
         <a href="./random-number-generator.html" class="card" data-tool-card="Random Number Generator generate random numbers">
           <h4>Random Number Generator</h4>
           <p>Generate random numbers</p>
+        </a>
+      </div>
+      
+      <h3>Calculators</h3>
+      <div class="grid">
+        <a href="./age-calculator.html" class="card" data-tool-card="Age Calculator calculate age">
+          <h4>Age Calculator</h4>
+          <p>Calculate age in years, months, and days</p>
+        </a>
+        <a href="./percentage-calculator.html" class="card" data-tool-card="Percentage Calculator calculate percentages">
+          <h4>Percentage Calculator</h4>
+          <p>Calculate percentages</p>
+        </a>
+        <a href="./loan-calculator.html" class="card" data-tool-card="Loan Calculator calculate loan payments">
+          <h4>Loan Calculator</h4>
+          <p>Calculate loan payments</p>
+        </a>
+        <a href="./gpa-calculator.html" class="card" data-tool-card="GPA Calculator calculate GPA">
+          <h4>GPA Calculator</h4>
+          <p>Calculate GPA</p>
+        </a>
+        <a href="./unit-converter.html" class="card" data-tool-card="Unit Converter convert units">
+          <h4>Unit Converter</h4>
+          <p>Convert between different units</p>
         </a>
       </div>
       
