--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <meta name="robots" content="index, follow">
 <meta name="keywords" content="free online tools, developer tools, text tools, json formatter, uuid generator, word counter, password generator">
 <link rel="canonical" href="https://nowoi.com/">
+<link rel="apple-touch-icon" href="Nico.png">
 <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
