--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -5,6 +5,7 @@
 <title>Privacy Policy – Free Online Tools</title>
 <meta name="description" content="Our privacy policy explains how we handle your data when you use our free online tools." />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="apple-touch-icon" href="Nico.png">
 <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
@@ -78,4 +79,5 @@
 
 <script src="./assets/js/common.js"></script>
 </body>
+
 </html>
