--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>100% Free Online Developer & Text Tools – Fast, Simple, No Installation</title>
+<title>Free Online Text, Code & Utility Tools | Fast & Secure</title>
 <meta name="description" content="Free Online Tools for Text, SEO & Web Development. Simple, fast and secure utilities for developers, writers, and content creators. No installation required." />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="robots" content="index, follow">
