--- a/tools/index.html
+++ b/tools/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>All Free Online Tools – Smart Tools for Creators & Developers</title>
+<title>Free Online Tools | nowoi</title>
 <meta name="description" content="100% Free Online Tools for developers, writers, and content creators. Fast, secure, and easy to use. No installation required." />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="robots" content="index, follow">
