--- a/terms.html
+++ b/terms.html
@@ -6,6 +6,7 @@
 <meta name="description" content="Our terms of service explain the rules for using our free online tools." />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="./assets/css/style.css">
+<link rel="icon" href="Nico.png" type="image/png">
 </head>
 
 <body>
@@ -77,4 +78,5 @@
 
 <script src="./assets/js/common.js"></script>
 </body>
+
 </html>
