--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 <title>Contact Us – Free Online Tools</title>
 <meta name="description" content="Contact us with any questions or feedback about our free online tools." />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="apple-touch-icon" href="Nico.png">
+<link rel="icon" href="Nico.png" type="image/png">
 <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
@@ -66,3 +66,4 @@
 </body>
 
 </html>
+
