--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 <meta name="robots" content="index, follow">
 <meta name="keywords" content="about nowoi, free online tools, developer tools, text tools">
 <link rel="canonical" href="https://nowoi.com/about.html">
-<link rel="apple-touch-icon" href="Nico.png">
+<link rel="icon" href="Nico.png" type="image/png">
 <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
@@ -84,3 +84,4 @@
 </body>
 
 </html>
+
