--- a/tools/index.html
+++ b/tools/index.html
@@ -8,8 +8,8 @@
 <meta name="robots" content="index, follow">
 <meta name="keywords" content="free online tools, developer tools, text tools, json formatter, uuid generator, word counter, password generator">
 <link rel="canonical" href="https://nowoi.com/tools/">
-<link rel="apple-touch-icon" href="Nico.png">
-<link rel="stylesheet" href="../assets/css/style.css">
+<link rel="icon" href="Nico.png" type="image/png">
+  <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 
 <body>
